# mcp-ai-git-flow

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  feature-workflow-mcp-server.md  pyproject.toml
.serena/: project.yml
src/feature_workflow/: __init__.py  cli.py  config.py  server.py
src/feature_workflow/clients/: __init__.py
src/feature_workflow/managers/: __init__.py  git_manager.py  workspace_manager.py  workspace_manager_old.py  worktree_manager.py
src/feature_workflow/models/: __init__.py  workspace.py
src/feature_workflow/tools/: __init__.py  cleanup_features.py  commit_feature.py  feature_status.py  list_features.py  start_feature.py  switch_feature.py  sync_feature.py
tests/: __init__.py  conftest.py
tests/unit/: test_git_manager.py  test_workspace_manager.py
